Fix events not showing hosts, improve event load times, event card design overhaul

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -577,6 +577,95 @@ body > div.global-container > .home-container > .activity-sidebar > ul.list-opti
 	transform: none;
 }
 
+.event-list {
+	width: 800px;
+}
+
+.event-item-container {
+	-webkit-box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.25);
+	-moz-box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.25);
+	box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.25);
+	background-color: #eee;
+	display: table;
+	padding: 10px 15px;
+	padding-right: 30px;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	min-height: 100px; 
+	width: 550px;
+}
+
+.event-item-container .event-options-panel {
+	display: table-cell;
+	min-width: 50px;
+	width: 50px;
+	padding-right: 15px;
+}
+  
+.event-item-container .event-options-panel span.event-upvote, 
+.event-item-container .event-options-panel span.event-votes, 
+.event-item-container .event-options-panel span.event-downvote {
+	display: block;
+	text-align: center;
+}
+
+.event-item-container .event-content-panel {
+	display: table-cell;
+	width: 100%;
+}
+  
+.event-item-container .event-content-panel .event-info {
+	display: table;
+	width: 100%;
+}
+  
+.event-item-container .event-content-panel .event-info .event-title {
+	display: table-cell;
+	font-size: 20px;
+	font-weight: 600;
+	width: 100%;
+}
+  
+.event-item-container .event-content-panel .event-info .event-category {
+	color: #777;
+	display: table-cell;
+	font-weight: 300;
+	min-width: 100px;
+	text-align: right;
+}
+  
+.event-item-container .event-content-panel .event-host {
+	display: block;
+	margin-bottom: 15px;
+	width: 100%;
+}
+  
+.event-item-container .event-content-panel .event-description {
+	display: block;
+	font-weight: 300;
+	margin-bottom: 15px;
+}
+  
+.event-item-container .event-content-panel .event-stats {
+	border-top: 1px solid #bbb;
+	display: table;
+	font-weight: 300;
+	padding: 5px 0;
+	width: 100%;
+}
+  
+.event-item-container .event-content-panel .event-stats .event-time {
+	display: table-cell;
+	min-width: 200px;
+	text-align: left;
+}
+  
+.event-item-container .event-content-panel .event-stats .event-going {
+	display: table-cell;
+	min-width: 200px;
+	text-align: right;
+}
+
 footer {
 	color: #aaa;
 	text-align: center;
